I've just learned how add fancy bullets to HTML lists using #CSS in the #Apptrepreneur course @ITvarsity

--- a/week2/linking_stylesheet/style.css
+++ b/week2/linking_stylesheet/style.css
@@ -7,3 +7,10 @@ p{
     color: coral;
     font-family: fantasy;
 }
+
+ul{
+    list-style-image: url("images/pointer-icon.png");
+}
+ol{
+    list-style-type: upper-roman;
+}
