#HTML5 #div boxes are awesome, and I just learned how to use them in the #Apptrepreneur course @ITvarsity

--- a/week2/linking_stylesheet/style.css
+++ b/week2/linking_stylesheet/style.css
@@ -14,3 +14,17 @@ ul{
 ol{
     list-style-type: upper-roman;
 }
+#menu-bar a{
+    font-family: Helvetica, sans-serif;
+    text-decoration: none;
+    background-color: aquamarine;
+    padding: 5px;
+}
+#menu-bar a:hover{
+    
+    background-color: aqua;
+    color: #ffffff;
+}
+a{
+    text-decoration: none;
+}
